# synth

./: .clang-format  CMakeLists.txt
include/asdf/: application.hpp  array.hpp  base.hpp  math.hpp  string.hpp
src/: application.cpp  main.cpp
